@@ -1,5 +1,10 @@
 2001-07-24  Richard Hestilow  <hestilow@ximian.com>
 
+	* capplet-util.c: Remove debugging cruft.
+	(capplet_init): Check for legacy with --init-session-settings too.
+
+2001-07-24  Richard Hestilow  <hestilow@ximian.com>
+
 	* capplet-util.[ch] (capplet_init): New argument of legacy files to
 	check for changes.
 
